# chocolatier

./: Cargo.toml  notes.md  wip.rs
choco_runtime/: Cargo.toml
choco_runtime/src/: lib.rs
chocolat/: Cargo.toml  build.rs
chocolat/src/: lib.rs
chocolatier_internal/: Cargo.toml
chocolatier_internal/src/: custom_parse.rs  lib.rs
chocolatier_macro/: Cargo.toml
chocolatier_macro/src/: lib.rs
chocolatier_objc_parser/: Cargo.toml
chocolatier_objc_parser/examples/: interesting-frameworks.m  print-ast.rs
chocolatier_objc_parser/src/: ast.rs  clang.rs  index.rs  lib.rs  xcode.rs
examples/: generate.rs  interesting-frameworks.m  print-ast.rs
fossil/: generator.rs
handwritten-chocolat/: Cargo.toml  build.rs
handwritten-chocolat/src/: block.rs  chocolat.m  main.rs
src/: ast.rs  clang.rs  generator.rs  lib.rs  main.rs  xcode.rs
tests/: empty.rs  enum.rs  import_only.rs  objc_method_call.rs
tests/compile_fail/: empty.stderr  incorrect_import.rs  incorrect_import.stderr
