[package]
name = "chocolatier"
version = "0.1.0"
authors = ["Vincent Isambart <vincent.isambart@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clang = { version = "0.22.1", features = ["runtime", "clang_8_0"] }
lazy_static = "1.4"
regex = "1.3.1"
tempfile = "3.1"
bitflags = "1.2.1"
