[package]
name = "chocolat"
version = "0.1.0"
authors = ["Vincent Isambart <vincent.isambart@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chocolatier = { path = ".." }
choco_runtime = { path = "../choco_runtime" }

[build-dependencies]
chocolatier = { path = ".." }
