[package]
name = "chocolatier_internal"
version = "0.1.0"
authors = ["Vincent Isambart <vincent.isambart@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chocolatier_objc_parser = { path = "../chocolatier_objc_parser" }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "visit", "visit-mut", "extra-traits"] }
cc = "1.0"
