[package]
name = "chocolatier_macro"
version = "0.1.0"
authors = ["Vincent Isambart <vincent.isambart@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
chocolatier_internal = { path = "../chocolatier_internal" }
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
