[package]
name = "handwritten-chocolat"
version = "0.1.0"
authors = ["Vincent Isambart <vincent.isambart@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.3"

[build-dependencies]
cc = "1.0"

[workspace]
# Not in the chocolatier workspace
